fix: text-align: center

--- a/scss/elements/_elements.base.scss
+++ b/scss/elements/_elements.base.scss
@@ -3,12 +3,7 @@
     box-sizing: border-box;
 }
 
-body {
-    text-align: center;
-}
-
 a {
-    text-decoration: none;
     color: $white;
 }
 
@@ -30,7 +25,6 @@ h1 {
 }
 
 h2 {
-    margin: 0;
     color: $primary;
     @include font(40px, Domine, normal, 3px);
 }
