--- a/scss/objects/_objects.article.scss
+++ b/scss/objects/_objects.article.scss
@@ -1,4 +1,5 @@
 article {
+    text-align: center;
     padding-bottom: 25px;
     background: url('/image/sea-horse-bg.jpg') no-repeat center/cover;
 }
