--- a/scss/objects/_objects.banner.scss
+++ b/scss/objects/_objects.banner.scss
@@ -1,6 +1,7 @@
 .banner {
     background: url(/image/banner.png) no-repeat;
     background-size: cover;
+    text-align: center;
     p {
         margin: 0 0 4vh;
         color: $white;
