--- a/scss/objects/_objects.character.scss
+++ b/scss/objects/_objects.character.scss
@@ -1,5 +1,8 @@
-.character-title {
-    color: $primary;
-    margin: 60px 0;
-    @include font(26px, Domine, normal, 4px);
+.character {
+    text-align: center;
+    &-title {
+        color: $primary;
+        margin: 60px 0;
+        @include font(26px, Domine, normal, 4px);
+    }
 }
