--- a/scss/objects/_objects.footer.scss
+++ b/scss/objects/_objects.footer.scss
@@ -1,6 +1,7 @@
 footer {
     padding: 45px 15px;
     background-color: $gray;
+    text-align: center;
 }
 
 .copyright {
