--- a/scss/objects/_objects.header.scss
+++ b/scss/objects/_objects.header.scss
@@ -1,4 +1,5 @@
 nav {
     font-size: 0;
+    text-align: center;
     background-color: $secondary;
 }
